@@ -104,13 +104,13 @@ class SoaApplicationMappingContextBuilderTest {
     assertNotNull(result.getLandAwards());
     assertNotNull(result.getOtherAssetAwards());
     assertEquals(1, result.getCostAwards().size());
-    assertEquals(soaCase.getAwards().get(0), result.getCostAwards().get(0));
+    assertEquals(soaCase.getAwards().getFirst(), result.getCostAwards().getFirst());
     assertEquals(1, result.getFinancialAwards().size());
-    assertEquals(soaCase.getAwards().get(1), result.getFinancialAwards().get(0));
+    assertEquals(soaCase.getAwards().get(1), result.getFinancialAwards().getFirst());
     assertEquals(1, result.getLandAwards().size());
-    assertEquals(soaCase.getAwards().get(2), result.getLandAwards().get(0));
+    assertEquals(soaCase.getAwards().get(2), result.getLandAwards().getFirst());
     assertEquals(1, result.getOtherAssetAwards().size());
-    assertEquals(soaCase.getAwards().get(3), result.getOtherAssetAwards().get(0));
+    assertEquals(soaCase.getAwards().get(3), result.getOtherAssetAwards().getFirst());
     assertEquals(SoaProceedingMappingContexts, result.getProceedingOutcomes());
   }
 
@@ -143,7 +143,7 @@ class SoaApplicationMappingContextBuilderTest {
     Exception e = assertThrows(CaabApplicationException.class, () ->
         applicationService.buildCaseOutcomeMappingContext(soaCase, SoaProceedingMappingContexts));
 
-    assertEquals(String.format("Failed to find AwardType with code: %s",
+    assertEquals("Failed to find AwardType with code: %s".formatted(
         soaCase.getAwards().get(3).getAwardType()), e.getMessage());
   }
 
@@ -153,8 +153,8 @@ class SoaApplicationMappingContextBuilderTest {
 
     PriorAuthorityTypeDetails priorAuthorityTypeDetails =
         buildPriorAuthorityTypeDetails(REFERENCE_DATA_ITEM_TYPE_LOV);
-    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().get(0);
-    PriorAuthorityDetail priorAuthoritiesItem = priorAuthorityTypeDetail.getPriorAuthorities().get(0);
+    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().getFirst();
+    PriorAuthorityDetail priorAuthoritiesItem = priorAuthorityTypeDetail.getPriorAuthorities().getFirst();
 
     when(lookupService.getPriorAuthorityType(soaPriorAuthority.getPriorAuthorityType()))
         .thenReturn(Mono.just(Optional.of(priorAuthorityTypeDetail)));
@@ -164,28 +164,28 @@ class SoaApplicationMappingContextBuilderTest {
         .description("thedescription");
 
     when(lookupService.getCommonValue(priorAuthoritiesItem.getLovCode(),
-        soaPriorAuthority.getDetails().get(0).getValue()))
+        soaPriorAuthority.getDetails().getFirst().getValue()))
         .thenReturn(Mono.just(Optional.of(lookup)));
 
     SoaPriorAuthorityMappingContext result = applicationService.buildPriorAuthorityMappingContext(
         soaPriorAuthority);
 
     verify(lookupService).getCommonValue(priorAuthoritiesItem.getLovCode(),
-        soaPriorAuthority.getDetails().get(0).getValue());
+        soaPriorAuthority.getDetails().getFirst().getValue());
 
     assertNotNull(result);
     assertEquals(soaPriorAuthority, result.getSoaPriorAuthority());
     assertNotNull(result.getPriorAuthorityTypeLookup());
-    assertEquals(priorAuthorityTypeDetails.getContent().get(0),
+    assertEquals(priorAuthorityTypeDetails.getContent().getFirst(),
         result.getPriorAuthorityTypeLookup());
 
     assertNotNull(result.getItems());
     assertEquals(1, result.getItems().size());
-    assertEquals(priorAuthoritiesItem, result.getItems().get(0).getKey());
-    assertEquals(soaPriorAuthority.getDetails().get(0).getValue(),
-        result.getItems().get(0).getValue().getCode());
+    assertEquals(priorAuthoritiesItem, result.getItems().getFirst().getKey());
+    assertEquals(soaPriorAuthority.getDetails().getFirst().getValue(),
+        result.getItems().getFirst().getValue().getCode());
     assertEquals(lookup.getDescription(),
-        result.getItems().get(0).getValue().getDescription());
+        result.getItems().getFirst().getValue().getDescription());
   }
 
   @Test
@@ -194,7 +194,7 @@ class SoaApplicationMappingContextBuilderTest {
 
     PriorAuthorityTypeDetails priorAuthorityTypeDetails =
         buildPriorAuthorityTypeDetails("otherDataType");
-    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().get(0);
+    PriorAuthorityTypeDetail priorAuthorityTypeDetail = priorAuthorityTypeDetails.getContent().getFirst();
 
     when(lookupService.getPriorAuthorityType(soaPriorAuthority.getPriorAuthorityType()))
         .thenReturn(Mono.just(Optional.of(priorAuthorityTypeDetail)));
@@ -205,17 +205,17 @@ class SoaApplicationMappingContextBuilderTest {
     assertNotNull(result);
     assertEquals(soaPriorAuthority, result.getSoaPriorAuthority());
     assertNotNull(result.getPriorAuthorityTypeLookup());
-    assertEquals(priorAuthorityTypeDetails.getContent().get(0),
+    assertEquals(priorAuthorityTypeDetails.getContent().getFirst(),
         result.getPriorAuthorityTypeLookup());
 
     assertNotNull(result.getItems());
     assertEquals(1, result.getItems().size());
-    assertEquals(priorAuthorityTypeDetails.getContent().get(0).getPriorAuthorities().get(0),
-        result.getItems().get(0).getKey());
-    assertEquals(soaPriorAuthority.getDetails().get(0).getValue(),
-        result.getItems().get(0).getValue().getCode());
-    assertEquals(soaPriorAuthority.getDetails().get(0).getValue(),
-        result.getItems().get(0).getValue().getDescription());
+    assertEquals(priorAuthorityTypeDetails.getContent().getFirst().getPriorAuthorities().getFirst(),
+        result.getItems().getFirst().getKey());
+    assertEquals(soaPriorAuthority.getDetails().getFirst().getValue(),
+        result.getItems().getFirst().getValue().getCode());
+    assertEquals(soaPriorAuthority.getDetails().getFirst().getValue(),
+        result.getItems().getFirst().getValue().getDescription());
   }
 
   @Test
@@ -229,7 +229,7 @@ class SoaApplicationMappingContextBuilderTest {
         () -> applicationService.buildPriorAuthorityMappingContext(
             soaPriorAuthority));
 
-    assertEquals(String.format("Failed to find PriorAuthorityType with code: %s",
+    assertEquals("Failed to find PriorAuthorityType with code: %s".formatted(
         soaPriorAuthority.getPriorAuthorityType()), e.getMessage());
   }
 
@@ -238,7 +238,7 @@ class SoaApplicationMappingContextBuilderTest {
     PriorAuthority soaPriorAuthority = buildPriorAuthority();
 
     PriorAuthorityDetail priorAuthoritiesItem = new PriorAuthorityDetail()
-        .code(soaPriorAuthority.getDetails().get(0).getName())
+        .code(soaPriorAuthority.getDetails().getFirst().getName())
         .description("priorAuthItemDesc")
         .dataType(REFERENCE_DATA_ITEM_TYPE_LOV);
 
@@ -251,15 +251,15 @@ class SoaApplicationMappingContextBuilderTest {
         .thenReturn(Mono.just(Optional.of(priorAuthorityTypeDetail)));
 
     when(lookupService.getCommonValue(priorAuthoritiesItem.getLovCode(),
-        soaPriorAuthority.getDetails().get(0).getValue()))
+        soaPriorAuthority.getDetails().getFirst().getValue()))
         .thenReturn(Mono.empty());
 
     Exception e = assertThrows(CaabApplicationException.class,
         () -> applicationService.buildPriorAuthorityMappingContext(
             soaPriorAuthority));
 
-    assertEquals(String.format("Failed to find common value with code: %s",
-        soaPriorAuthority.getDetails().get(0).getValue()), e.getMessage());
+    assertEquals("Failed to find common value with code: %s".formatted(
+        soaPriorAuthority.getDetails().getFirst().getValue()), e.getMessage());
   }
 
   @Test
@@ -298,9 +298,9 @@ class SoaApplicationMappingContextBuilderTest {
         .thenReturn(Mono.just(Optional.of(clientInvLookup)));
 
     CommonLookupValueDetail scopeLimitationOneLookup = new CommonLookupValueDetail()
-        .code(soaProceeding.getScopeLimitations().get(0).getScopeLimitation())
+        .code(soaProceeding.getScopeLimitations().getFirst().getScopeLimitation())
         .description("the limitation 1");
-    when(lookupService.getCommonValue(COMMON_VALUE_SCOPE_LIMITATIONS, soaProceeding.getScopeLimitations().get(0).getScopeLimitation()))
+    when(lookupService.getCommonValue(COMMON_VALUE_SCOPE_LIMITATIONS, soaProceeding.getScopeLimitations().getFirst().getScopeLimitation()))
         .thenReturn(Mono.just(Optional.of(scopeLimitationOneLookup)));
 
     CommonLookupValueDetail scopeLimitationTwoLookup = new CommonLookupValueDetail()
@@ -384,9 +384,9 @@ class SoaApplicationMappingContextBuilderTest {
     assertEquals(proceedingStatusLookup, result.getProceedingStatusLookup());
     assertNotNull(result.getScopeLimitations());
     assertEquals(3, result.getScopeLimitations().size());
-    assertEquals(soaProceeding.getScopeLimitations().get(0),
-        result.getScopeLimitations().get(0).getKey());
-    assertEquals(scopeLimitationOneLookup, result.getScopeLimitations().get(0).getValue());
+    assertEquals(soaProceeding.getScopeLimitations().getFirst(),
+        result.getScopeLimitations().getFirst().getKey());
+    assertEquals(scopeLimitationOneLookup, result.getScopeLimitations().getFirst().getValue());
     assertEquals(soaProceeding.getScopeLimitations().get(1),
         result.getScopeLimitations().get(1).getKey());
     assertEquals(scopeLimitationTwoLookup, result.getScopeLimitations().get(1).getValue());
@@ -395,9 +395,9 @@ class SoaApplicationMappingContextBuilderTest {
     assertEquals(scopeLimitationThreeLookup, result.getScopeLimitations().get(2).getValue());
 
     // Check the proceeding outcome data
-    assertEquals(outcomeResults.getContent().get(0), result.getOutcomeResultLookup());
-    assertEquals(stageEnds.getContent().get(0), result.getStageEndLookup());
-    assertEquals(courts.getContent().get(0), result.getCourtLookup());
+    assertEquals(outcomeResults.getContent().getFirst(), result.getOutcomeResultLookup());
+    assertEquals(stageEnds.getContent().getFirst(), result.getStageEndLookup());
+    assertEquals(courts.getContent().getFirst(), result.getCourtLookup());
 //          return true; // Return true to indicate the match is successful
 //        })
 //        .verifyComplete();
@@ -525,7 +525,7 @@ class SoaApplicationMappingContextBuilderTest {
     assertEquals(applicationTypeLookup, result.getApplicationType());
     assertEquals(providerDetail, result.getProviderDetail());
     assertEquals(providerDetail.getOffices().get(2), result.getProviderOffice());
-    assertEquals(providerDetail.getOffices().get(2).getFeeEarners().get(0),
+    assertEquals(providerDetail.getOffices().get(2).getFeeEarners().getFirst(),
         result.getFeeEarnerContact());
     assertEquals(providerDetail.getOffices().get(2).getFeeEarners().get(1),
         result.getSupervisorContact());
